2005-11-19  James Turner  <james@worldforge.org>

	* Eris/Type.h, Eris/Type.cpp: add a helper method to perform the copy/merge
	  behaviour choosen for combining incoming values in SET operations with
	  the existing data.
	  
	* Eris/Entity.cpp: use the new copy/merge function to set attribute state.
	  This should permit incremental updating of large attributes, eg 'terrain',
	  from the server.

	* Eris/View.cpp: make an assert more specific; avoid a failure if the View
	  is deleted before the top-level entity is registered.
	  
	* Eris/Account.cpp: don't log warning messages for server-side errors to the
	  console - just pass them up to the client.
	  
	* test/agent.cpp, test/agent.h: work-in-progress code towards spamming the
	  the test-harness with a large number of ops.
	  
2005-10-25  Al Riddoch  <alriddoch@zepler.org>

	* Release 1.3.9, Interface version 9.

2005-10-25  Al Riddoch  <alriddoch@zepler.org>

	* test/Makefile.am: Re-enable running tests, as they now seem to
	  complete.

2005-10-23  James Turner  <james@worldforge.org>

	* configure.ac: update version number for 1.3.9 release

2005-10-23  James Turner  <james@worldforge.org>

	* test/tests.cpp: add a test for entity processing
	  sound of actions

	* test/agent.cpp: silence some silly test output
	
2005-10-23  James Turner  <james@worldforge.org>

	* Eris/Account.cpp, Eris/Response.cpp, Eris/Response.h: Add a new response
	  type, ignore, and use this to stop the warning about an op with a valid
	  refno being unhandled when activating a character. Makes the unit-tests
	  almost silent.

2005-10-22  James Turner  <james@worldforge.org>

	* Eris/Entity.cpp, Eris/Entity.h: change how state updates (move, set)
	  are processed, so Move ops can update arbitrary attributes.
	  
	* Eris/EntityRouter.cpp, Eris/IGRouter.cpp: changes for revised Entity
	  state update API.
	  
	* Eris/View.h: add an accessor for querying the current size of the 